seperated apis from calls

--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- LM js -->
+    <script src="./assets/js/api.js"></script>
     <script src="./assets/js/script.js"></script>
     <script
       type="text/javascript"
@@ -801,9 +802,8 @@
                   document.getElementById('myChart'),
                   config
               ); -->
-         
 
-      <!-- // setup
+    <!-- // setup
     </script> -->
   </body>
 </html>
