--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/css/styles.css"></link>
     <title>$how Me The Money!</title>
+    <script
+			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
+			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+			  crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
@@ -148,6 +152,9 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/script.js"></script>
+
 </body>
 
 </html>
