--- a/index.html
+++ b/index.html
@@ -122,19 +122,18 @@
         </select>
     </form>
 
-    <div class="chartCard">
-        <div class="chartBox">
-            <canvas id="myChart"></canvas>
-        </div>
-    </div>
     <footer>
         <div class="row justify-content-center">
             <div class="container text-center py-4">
                 <div class="col-12 btn-3">
                     <form>
-                        <a href="" class="button is-success is-link" id="Register">Register to vote!</a>
-                        <a href="" class="button is-success is-link" id="When">When is the next election?</a>
-                        <a href="" class="button is-success is-link" id="Where">Where can I vote?</a>
+                        <a href="https://vote.gov/"
+                        <button class="button is-light">Register to vote</button></a>
+                        <a href = "https://ballotpedia.org/Elections_calendar#Upcoming_election_dates"
+                        <button class="button is-light">When is the next election?</button></a>
+                        <a href="https://www.usa.gov/election-office"
+                        <button class="button is-light">How can I register to vote?</button></a>
+                        
                         <a href="https://github.com/BrianLalli/Show-Me-The-Money">
                             <div class="button is-success is-link is-light" id="GitHub">
                                 <span class="icon">
