--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/css/styles.css"></link>
     <title>$how Me The Money!</title>
-    <script
-			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
-			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-			  crossorigin="anonymous"></script>
+   
     <style>
         * {
             margin: 0;
@@ -65,7 +62,7 @@
 
     <form>
         <label for="states" class="sr-only">Choose a state</label>
-        <select id="states"
+        <select onchange="this.form.submit()" id="states"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-r-lg border-l-gray-100 dark:border-l-gray-700 border-l-2 focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             <option selected>Choose a state</option>
             <option value="AK">Alaska</option>
@@ -121,12 +118,16 @@
             <option value="WY">Wyoming</option>
         </select>
     </form>
+<div >
+    <div id="stateResults">
 
-    <div class="chartCard">
+    </div>
+</div>
+    <!-- <div class="chartCard">
         <div class="chartBox">
             <canvas id="myChart"></canvas>
         </div>
-    </div>
+    </div> -->
     <footer>
         <div class="row justify-content-center">
             <div class="container text-center py-4">
@@ -151,6 +152,10 @@
 
         </div>
     </footer>
+     <script
+			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
+			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+			  crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/script.js"></script>
