--- a/index.html
+++ b/index.html
@@ -78,42 +78,46 @@
             <option value="WY">Wyoming</option>
         </select>
     </form>
-<div >
-    <div id="stateResults">
+    <div>
+        <div id="stateResults">
 
+        </div>
     </div>
-</div>
-    <!-- <div class="chartCard">
+    <div class="chartCard">
         <div class="chartBox">
-            <!-- <canvas id="myChart"></canvas> -->
+            <canvas id="myChart"></canvas>
         </div>
+    </form>
 
 
-    <div class="row content has-text-centered">
-        <div class="container text-center py-4">
-            <form>
-                <a href="https://www.vote.org/am-i-registered-to-vote/?gclid=Cj0KCQjwlK-WBhDjARIsAO2sErQuM7hqUFjx8KS1hFsJm8-wTyjhX4m_l7RzjDFoDqGZvy73u0wLKGMaAjluEALw_wcB"
-                    class="button is-success is-link" id="Register">Register to vote!</a>
-                <a href="https://www.usa.gov/election-office" class="button is-success is-link" id="When">When is
-                    the next election?</a>
-                <a href="https://www.usa.gov/how-to-vote" class="button is-success is-link" id="Where">Where can I
-                    vote?</a>
-                <a href="https://github.com/BrianLalli/Show-Me-The-Money">
-                    <div class="button is-success is-link is-light" id="GitHub">
-                        <span class="icon">
-                            <i class="fab fa-github"></i>
-                        </span>
-                        <span>GitHub</span>
-                    </div>
-                </a>
-            </form>
+
+
+        <div class="row content has-text-centered">
+            <div class="container text-center py-4">
+                <form>
+                    <a href="https://www.vote.org/am-i-registered-to-vote/?gclid=Cj0KCQjwlK-WBhDjARIsAO2sErQuM7hqUFjx8KS1hFsJm8-wTyjhX4m_l7RzjDFoDqGZvy73u0wLKGMaAjluEALw_wcB"
+                        class="button is-success is-link" id="Register">Register to vote!</a>
+                    <a href="https://www.usa.gov/election-office" class="button is-success is-link" id="When">When is
+                        the next election?</a>
+                    <a href="https://www.usa.gov/how-to-vote" class="button is-success is-link" id="Where">Where can I
+                        vote?</a>
+                    <a href="https://github.com/BrianLalli/Show-Me-The-Money">
+                        <div class="button is-success is-link is-light" id="GitHub">
+                            <span class="icon">
+                                <i class="fab fa-github"></i>
+                            </span>
+                            <span>GitHub</span>
+                        </div>
+                    </a>
+                </form>
+            </div>
+
         </div>
-
-    </div>
-
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./assets/js/api.js"></script>
-    <script src="./assets/js/script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
+            integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="./assets/js/api.js"></script>
+        <script src="./assets/js/script.js"></script>
 
 </body>
 
