--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     </div>
 </div>
-    <!-- <div class="chartCard">
+  <div class="chartCard">
         <div class="chartBox">
         </div>
 
