--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="chartMenu">
-            <p id="ProjectTitle">$how Me The Money!</p>
+            <p href="file:///Users/brianlalli/Desktop/UTA-bootcamp/Repositories/Group%20Projects/Interactive-Front-End-Application-Group-5/index.html" id="ProjectTitle">$how Me The Money!</p>
         </div>
     </header>
 
@@ -78,47 +78,33 @@
             <option value="WY">Wyoming</option>
         </select>
     </form>
-    <div>
-        <div id="stateResults">
+    <div id="stateResults"></div>
+    </form>
 
-    </div>
-</div>
-    <div class="chartCard">
-        <div class="chartBox">
-        </div>
-    </div>
-    <div class="chartCard">
+    <main class="chartCard"></main>
+
+
+    <footer>
+        <form id="footer">
+            <a href="https://www.vote.org/am-i-registered-to-vote/?gclid=Cj0KCQjwlK-WBhDjARIsAO2sErQuM7hqUFjx8KS1hFsJm8-wTyjhX4m_l7RzjDFoDqGZvy73u0wLKGMaAjluEALw_wcB"
+                class="button is-success is-link" id="Register">Register to vote!</a>
+            <a href="https://www.usa.gov/election-office" class="button is-success is-link" id="When">When
+                is
+                the next election?</a>
+            <a href="https://www.usa.gov/how-to-vote" class="button is-success is-link" id="Where">Where can
+                I
+                vote?</a>
+                <a href="https://github.com/BrianLalli/Show-Me-The-Money" class="button is-success is-link" id="Where">GitHub</a>
+            <a href="https://github.com/BrianLalli/Show-Me-The-Money">
+            </a>
         </form>
-
-
-        <footer>
-            <form>
-                <a href="https://www.vote.org/am-i-registered-to-vote/?gclid=Cj0KCQjwlK-WBhDjARIsAO2sErQuM7hqUFjx8KS1hFsJm8-wTyjhX4m_l7RzjDFoDqGZvy73u0wLKGMaAjluEALw_wcB"
-                    class="button is-success is-link" id="Register">Register to vote!</a>
-                <a href="https://www.usa.gov/election-office" class="button is-success is-link" id="When">When
-                    is
-                    the next election?</a>
-                <a href="https://www.usa.gov/how-to-vote" class="button is-success is-link" id="Where">Where can
-                    I
-                    vote?</a>
-                <a href="https://github.com/BrianLalli/Show-Me-The-Money">
-                    <div class="button is-success is-link is-light" id="GitHub">
-                        <span class="icon">
-                            <i class="fab fa-github"></i>
-                        </span>
-                        <span>GitHub</span>
-                    </div>
-                </a>
-            </form>
         </div>
- 
-    <script
-			  src="https://code.jquery.com/jquery-3.6.0.slim.js"
-			  integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-			  crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./assets/js/api.js"></script>
-    <script src="./assets/js/script.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
+            integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="./assets/js/api.js"></script>
+        <script src="./assets/js/script.js"></script>
 
 </body>
 
