append both api to html, added favicon :)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     </link>
     <title>$how Me The Money!</title>
+    <link rel="icon" href="./assets/favicon.ico"></link>
 </head>
 
 <body>
@@ -81,6 +82,13 @@
     <div id="stateResults"></div>
     </form>
 
+    <form>
+        <div id="infoDisplay"></div>
+    </form>
+
+   
+    
+</div>
     <main class="chartCard"></main>
 
 
