final script touches

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,200&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     </link>
     <title>$how Me The Money!</title>
@@ -82,7 +82,7 @@
     <div id="stateResults"></div>
     </form>
 
-    <form>
+    <form class="infoDisplayClass">
         <div id="infoDisplay"></div>
     </form>
 
