--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="hero-body">
             <div class="container has-text-centered dropdown">
-                <div class="column is-9 is-offset-1 fitscreen">
+                <div class="column is-9 is-offset-1 fitscreen main">
                     <div class="box">
                         <div class="field is-grouped grouped">
                             <form id="dropdown">
@@ -213,6 +213,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
         integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script src="paging.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
