--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     <span class="icon">
                                         <i class="fa fa-book"></i>
                                     </span>
-                                    <span>Where is the next election?</span>
+                                    <span>Where can I vote?</span>
                                 </a>
                             </span>
                             <span class="navbar-item GitHub">
@@ -191,7 +191,7 @@
                                     <span class="icon">
                                         <i class="fa fa-book"></i>
                                     </span>
-                                    <span>Where is the next election?</span>
+                                    <span>Where can I vote?</span>
                                 </a>
                             </span>
                             <span class="navbar-item GitHub">
